src/objects/JIRA_Plan_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>JIRA Plan Milestone</label>
    <nameField>
        <displayFormat>JPMIL-{000000000}</displayFormat>
        <label>JIRA Plan Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA Plan Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>